week12 지하철승객수 2020.12월로 변경

--- a/week12.lab.ipynb
+++ b/week12.lab.ipynb
@@ -69,263 +69,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "========================\n",
-      "1호선\n",
-      "@ 이용객이 가장 많은 역 순위\n",
-      "서울역 2160466\n",
-      "종각 1686754\n",
-      "종로3가 1296143\n",
-      "@ 이용객이 가장 적은 역 순위\n",
-      "동묘앞 556629\n",
-      "동대문 621554\n",
-      "신설동 730691\n",
-      "========================\n",
-      "2호선\n",
-      "@ 이용객이 가장 많은 역 순위\n",
-      "강남 4275444\n",
-      "잠실(송파구청) 3522074\n",
-      "신림 3318933\n",
-      "@ 이용객이 가장 적은 역 순위\n",
-      "도림천 75668\n",
-      "신답 88876\n",
-      "용두(동대문구청) 126177\n",
-      "========================\n",
-      "3호선\n",
-      "@ 이용객이 가장 많은 역 순위\n",
-      "고속터미널 2262541\n",
-      "양재(서초구청) 2063345\n",
-      "연신내 1965286\n",
-      "@ 이용객이 가장 적은 역 순위\n",
-      "충무로 35\n",
-      "학여울 124884\n",
-      "지축 208890\n",
-      "========================\n",
-      "4호선\n",
-      "@ 이용객이 가장 많은 역 순위\n",
-      "수유(강북구청) 1824986\n",
-      "혜화 1651073\n",
-      "쌍문 1510539\n",
-      "@ 이용객이 가장 적은 역 순위\n",
-      "남태령 63059\n",
-      "동작(현충원) 156122\n",
-      "삼각지 273241\n",
-      "========================\n",
-      "경부선\n",
-      "@ 이용객이 가장 많은 역 순위\n",
-      "영등포 2122152\n",
-      "수원 2044759\n",
-      "용산 1778151\n",
-      "@ 이용객이 가장 적은 역 순위\n",
-      "직산 42217\n",
-      "서동탄 77941\n",
-      "진위 81413\n",
-      "========================\n",
-      "경인선\n",
-      "@ 이용객이 가장 많은 역 순위\n",
-      "부천 1833309\n",
-      "부평 1749882\n",
-      "역곡 1507167\n",
-      "@ 이용객이 가장 적은 역 순위\n",
-      "도원 178719\n",
-      "인천 193187\n",
-      "도화 222447\n",
-      "========================\n",
-      "경원선\n",
-      "@ 이용객이 가장 많은 역 순위\n",
-      "의정부 1022741\n",
-      "청량리(서울시립대입구) 857752\n",
-      "왕십리(성동구청) 784449\n",
-      "@ 이용객이 가장 적은 역 순위\n",
-      "창동 11\n",
-      "옥수 2659\n",
-      "보산 89699\n",
-      "========================\n",
-      "안산선\n",
-      "@ 이용객이 가장 많은 역 순위\n",
-      "중앙 980955\n",
-      "산본 888859\n",
-      "상록수 886908\n",
-      "@ 이용객이 가장 적은 역 순위\n",
-      "신길온천 92297\n",
-      "수리산 219523\n",
-      "반월 234845\n",
-      "========================\n",
-      "과천선\n",
-      "@ 이용객이 가장 많은 역 순위\n",
-      "범계 1357810\n",
-      "인덕원 1263738\n",
-      "평촌 902827\n",
-      "@ 이용객이 가장 적은 역 순위\n",
-      "경마공원 71037\n",
-      "대공원 261884\n",
-      "과천 289203\n",
-      "========================\n",
-      "분당선\n",
-      "@ 이용객이 가장 많은 역 순위\n",
-      "야탑 1361451\n",
-      "서현 1273643\n",
-      "모란 1142939\n",
-      "@ 이용객이 가장 적은 역 순위\n",
-      "복정 11\n",
-      "구룡 103980\n",
-      "보정 122966\n",
-      "========================\n",
-      "일산선\n",
-      "@ 이용객이 가장 많은 역 순위\n",
-      "삼송 976517\n",
-      "화정 922486\n",
-      "대화 607323\n",
-      "@ 이용객이 가장 적은 역 순위\n",
-      "지축 1\n",
-      "대곡 91176\n",
-      "마두 399396\n",
-      "========================\n",
-      "중앙선\n",
-      "@ 이용객이 가장 많은 역 순위\n",
-      "회기 1291817\n",
-      "구리 742137\n",
-      "도농 506114\n",
-      "@ 이용객이 가장 적은 역 순위\n",
-      "지평 4781\n",
-      "신원 17033\n",
-      "오빈 18399\n",
-      "========================\n",
-      "장항선\n",
-      "@ 이용객이 가장 많은 역 순위\n",
-      "온양온천 209026\n",
-      "아산 158130\n",
-      "쌍용(나사렛대) 113102\n",
-      "@ 이용객이 가장 적은 역 순위\n",
-      "배방 55556\n",
-      "봉명 63341\n",
-      "신창(순천향대) 85343\n",
-      "========================\n",
-      "경의선\n",
-      "@ 이용객이 가장 많은 역 순위\n",
-      "일산 505769\n",
-      "행신 413064\n",
-      "탄현 396642\n",
-      "@ 이용객이 가장 적은 역 순위\n",
-      "김포공항 1\n",
-      "검암 1\n",
-      "계양 6\n",
-      "========================\n",
-      "경춘선\n",
-      "@ 이용객이 가장 많은 역 순위\n",
-      "평내호평 344552\n",
-      "마석 225552\n",
-      "퇴계원 191924\n",
-      "@ 이용객이 가장 적은 역 순위\n",
-      "백양리 7342\n",
-      "굴봉산 14173\n",
-      "김유정 21952\n",
-      "========================\n",
-      "수인선\n",
-      "@ 이용객이 가장 많은 역 순위\n",
-      "소래포구 321865\n",
-      "인하대 314005\n",
-      "인천논현 312406\n",
-      "@ 이용객이 가장 적은 역 순위\n",
-      "달월 4934\n",
-      "야목 13157\n",
-      "어천 39865\n",
-      "========================\n",
-      "경강선\n",
-      "@ 이용객이 가장 많은 역 순위\n",
-      "경기광주 362348\n",
-      "판교 223186\n",
-      "초월 157281\n",
-      "@ 이용객이 가장 적은 역 순위\n",
-      "세종대왕릉 18060\n",
-      "이매 59225\n",
-      "신둔도예촌 72789\n",
-      "========================\n",
-      "5호선\n",
-      "@ 이용객이 가장 많은 역 순위\n",
-      "까치산 1544148\n",
-      "광화문(세종문화회관) 1521981\n",
-      "여의도 1472353\n",
-      "@ 이용객이 가장 적은 역 순위\n",
-      "동대문역사문화공원(DDP) 149815\n",
-      "강일 166615\n",
-      "오금 199273\n",
-      "========================\n",
-      "6호선\n",
-      "@ 이용객이 가장 많은 역 순위\n",
-      "응암 948441\n",
-      "공덕 937546\n",
-      "망원 805257\n",
-      "@ 이용객이 가장 적은 역 순위\n",
+      "=========1호선==========\n",
+      "@ 이용객이 가장 많은 역 순위 @\n",
+      "서울역 1639892\n",
+      "종각 1309829\n",
+      "종로3가 943527\n",
+      "@ 이용객이 가장 적은 역 순위 @\n",
+      "동묘앞 423253\n",
+      "동대문 504353\n",
+      "신설동 613813\n",
+      "=========2호선==========\n",
+      "@ 이용객이 가장 많은 역 순위 @\n",
+      "강남 3167883\n",
+      "신림 2799927\n",
+      "잠실(송파구청) 2669433\n",
+      "@ 이용객이 가장 적은 역 순위 @\n",
+      "도림천 61915\n",
+      "신답 72623\n",
+      "용두(동대문구청) 107339\n",
+      "=========3호선==========\n",
+      "@ 이용객이 가장 많은 역 순위 @\n",
+      "고속터미널 1746144\n",
+      "양재(서초구청) 1639852\n",
+      "연신내 1630047\n",
+      "@ 이용객이 가장 적은 역 순위 @\n",
+      "충무로 15\n",
+      "학여울 71817\n",
+      "지축 139794\n",
+      "=========4호선==========\n",
+      "@ 이용객이 가장 많은 역 순위 @\n",
+      "수유(강북구청) 1538536\n",
+      "쌍문 1282986\n",
+      "미아사거리 1241073\n",
+      "@ 이용객이 가장 적은 역 순위 @\n",
+      "남태령 44147\n",
+      "동작(현충원) 105936\n",
+      "삼각지 197383\n",
+      "=========경부선==========\n",
+      "@ 이용객이 가장 많은 역 순위 @\n",
+      "영등포 1712414\n",
+      "수원 1500489\n",
+      "용산 1341463\n",
+      "@ 이용객이 가장 적은 역 순위 @\n",
+      "직산 32147\n",
+      "서동탄 58953\n",
+      "진위 64272\n",
+      "=========경인선==========\n",
+      "@ 이용객이 가장 많은 역 순위 @\n",
+      "부천 1495296\n",
+      "부평 1346383\n",
+      "역곡 1197906\n",
+      "@ 이용객이 가장 적은 역 순위 @\n",
+      "인천 127544\n",
+      "도원 131234\n",
+      "도화 170148\n",
+      "=========경원선==========\n",
+      "@ 이용객이 가장 많은 역 순위 @\n",
+      "의정부 814899\n",
+      "청량리(서울시립대입구) 639694\n",
+      "왕십리(성동구청) 614608\n",
+      "@ 이용객이 가장 적은 역 순위 @\n",
+      "창동 6\n",
+      "옥수 1787\n",
+      "보산 69877\n",
+      "=========안산선==========\n",
+      "@ 이용객이 가장 많은 역 순위 @\n",
+      "상록수 727908\n",
+      "중앙 714234\n",
+      "산본 698124\n",
+      "@ 이용객이 가장 적은 역 순위 @\n",
+      "신길온천 71231\n",
+      "수리산 171290\n",
+      "반월 186228\n",
+      "=========과천선==========\n",
+      "@ 이용객이 가장 많은 역 순위 @\n",
+      "범계 1058533\n",
+      "인덕원 1019046\n",
+      "평촌 742345\n",
+      "@ 이용객이 가장 적은 역 순위 @\n",
+      "경마공원 53458\n",
+      "대공원 91434\n",
+      "과천 209914\n",
+      "=========분당선==========\n",
+      "@ 이용객이 가장 많은 역 순위 @\n",
+      "야탑 1100531\n",
+      "서현 1023453\n",
+      "모란 909151\n",
+      "@ 이용객이 가장 적은 역 순위 @\n",
+      "복정 8\n",
+      "구룡 69748\n",
+      "보정 90014\n",
+      "=========일산선==========\n",
+      "@ 이용객이 가장 많은 역 순위 @\n",
+      "삼송 774332\n",
+      "화정 725658\n",
+      "대화 500508\n",
+      "@ 이용객이 가장 적은 역 순위 @\n",
+      "지축 4\n",
+      "대곡 65102\n",
+      "정발산 296070\n",
+      "=========중앙선==========\n",
+      "@ 이용객이 가장 많은 역 순위 @\n",
+      "회기 1001485\n",
+      "구리 585146\n",
+      "도농 400570\n",
+      "@ 이용객이 가장 적은 역 순위 @\n",
+      "지평 1705\n",
+      "신원 8310\n",
+      "오빈 11526\n",
+      "=========장항선==========\n",
+      "@ 이용객이 가장 많은 역 순위 @\n",
+      "온양온천 161235\n",
+      "아산 118077\n",
+      "쌍용(나사렛대) 81797\n",
+      "@ 이용객이 가장 적은 역 순위 @\n",
+      "배방 42895\n",
+      "신창(순천향대) 52073\n",
+      "봉명 52802\n",
+      "=========경의선==========\n",
+      "@ 이용객이 가장 많은 역 순위 @\n",
+      "일산 381097\n",
+      "행신 321438\n",
+      "탄현 308088\n",
+      "@ 이용객이 가장 적은 역 순위 @\n",
+      "계양 2\n",
+      "임진강 668\n",
+      "곡산 23554\n",
+      "=========경춘선==========\n",
+      "@ 이용객이 가장 많은 역 순위 @\n",
+      "평내호평 248617\n",
+      "마석 162475\n",
+      "퇴계원 152076\n",
+      "@ 이용객이 가장 적은 역 순위 @\n",
+      "굴봉산 4560\n",
+      "백양리 6045\n",
+      "김유정 10674\n",
+      "=========수인선==========\n",
+      "@ 이용객이 가장 많은 역 순위 @\n",
+      "인천논현 241320\n",
+      "인하대 241139\n",
+      "소래포구 206516\n",
+      "@ 이용객이 가장 적은 역 순위 @\n",
+      "달월 3544\n",
+      "야목 7747\n",
+      "어천 24637\n",
+      "=========경강선==========\n",
+      "@ 이용객이 가장 많은 역 순위 @\n",
+      "경기광주 284699\n",
+      "판교 179677\n",
+      "초월 124634\n",
+      "@ 이용객이 가장 적은 역 순위 @\n",
+      "세종대왕릉 11017\n",
+      "이매 39721\n",
+      "신둔도예촌 48243\n",
+      "=========5호선==========\n",
+      "@ 이용객이 가장 많은 역 순위 @\n",
+      "까치산 1268756\n",
+      "광화문(세종문화회관) 1218113\n",
+      "화곡 1213929\n",
+      "@ 이용객이 가장 적은 역 순위 @\n",
+      "동대문역사문화공원(DDP) 129478\n",
+      "오금 157683\n",
+      "올림픽공원(한국체대) 160965\n",
+      "=========6호선==========\n",
+      "@ 이용객이 가장 많은 역 순위 @\n",
+      "응암 783532\n",
+      "공덕 740299\n",
+      "망원 620819\n",
+      "@ 이용객이 가장 적은 역 순위 @\n",
       "신내 3\n",
-      "연신내 24\n",
-      "버티고개 118222\n",
-      "========================\n",
-      "7호선\n",
-      "@ 이용객이 가장 많은 역 순위\n",
-      "가산디지털단지 2311208\n",
-      "학동 1243995\n",
-      "광명사거리 1192906\n",
-      "@ 이용객이 가장 적은 역 순위\n",
-      "장암 92611\n",
-      "부천종합운동장 237345\n",
-      "삼산체육관 261924\n",
-      "========================\n",
-      "8호선\n",
-      "@ 이용객이 가장 많은 역 순위\n",
-      "문정 1118070\n",
-      "암사 947811\n",
-      "장지 894437\n",
-      "@ 이용객이 가장 적은 역 순위\n",
-      "모란 226470\n",
-      "신흥 252096\n",
-      "수진 265390\n",
-      "========================\n",
-      "9호선\n",
-      "@ 이용객이 가장 많은 역 순위\n",
-      "신논현 1650695\n",
-      "노량진 1392678\n",
-      "여의도 1330983\n",
-      "@ 이용객이 가장 적은 역 순위\n",
-      "동작(현충원) 90077\n",
-      "개화 115261\n",
-      "구반포 149370\n",
-      "========================\n",
-      "공항철도 1호선\n",
-      "@ 이용객이 가장 많은 역 순위\n",
-      "디지털미디어시티 654422\n",
-      "김포공항 531828\n",
-      "홍대입구 509765\n",
-      "@ 이용객이 가장 적은 역 순위\n",
-      "인천공항2터미널 100345\n",
-      "공항화물청사 124091\n",
-      "공덕 131753\n",
-      "========================\n",
-      "9호선2~3단계\n",
-      "@ 이용객이 가장 많은 역 순위\n",
-      "봉은사 798842\n",
-      "언주 509822\n",
-      "선정릉 503676\n",
-      "@ 이용객이 가장 적은 역 순위\n",
-      "둔촌오륜 59215\n",
-      "한성백제 125313\n",
-      "종합운동장 218529\n",
-      "========================\n",
-      "우이신설선\n",
-      "@ 이용객이 가장 많은 역 순위\n",
-      "북한산보국문 315745\n",
-      "솔샘 286916\n",
-      "정릉 232670\n",
-      "@ 이용객이 가장 적은 역 순위\n",
-      "보문 80208\n",
-      "삼양 111930\n",
-      "신설동 115092\n"
+      "연신내 9\n",
+      "버티고개 95433\n",
+      "=========7호선==========\n",
+      "@ 이용객이 가장 많은 역 순위 @\n",
+      "가산디지털단지 1964995\n",
+      "학동 1045919\n",
+      "광명사거리 1031881\n",
+      "@ 이용객이 가장 적은 역 순위 @\n",
+      "장암 71882\n",
+      "부천종합운동장 189806\n",
+      "삼산체육관 192403\n",
+      "=========8호선==========\n",
+      "@ 이용객이 가장 많은 역 순위 @\n",
+      "문정 920401\n",
+      "암사 792715\n",
+      "장지 755265\n",
+      "@ 이용객이 가장 적은 역 순위 @\n",
+      "모란 172775\n",
+      "신흥 216033\n",
+      "수진 223398\n",
+      "=========9호선==========\n",
+      "@ 이용객이 가장 많은 역 순위 @\n",
+      "신논현 1240544\n",
+      "노량진 1017044\n",
+      "여의도 891114\n",
+      "@ 이용객이 가장 적은 역 순위 @\n",
+      "동작(현충원) 64249\n",
+      "개화 92531\n",
+      "구반포 114269\n",
+      "=========공항철도 1호선==========\n",
+      "@ 이용객이 가장 많은 역 순위 @\n",
+      "디지털미디어시티 510128\n",
+      "계양 383313\n",
+      "김포공항 373367\n",
+      "@ 이용객이 가장 적은 역 순위 @\n",
+      "인천공항2터미널 97566\n",
+      "공덕 103008\n",
+      "공항화물청사 116016\n",
+      "=========9호선2~3단계==========\n",
+      "@ 이용객이 가장 많은 역 순위 @\n",
+      "봉은사 628382\n",
+      "언주 415847\n",
+      "선정릉 392464\n",
+      "@ 이용객이 가장 적은 역 순위 @\n",
+      "둔촌오륜 43922\n",
+      "한성백제 94698\n",
+      "종합운동장 169085\n",
+      "=========우이신설선==========\n",
+      "@ 이용객이 가장 많은 역 순위 @\n",
+      "북한산보국문 251118\n",
+      "솔샘 236299\n",
+      "정릉 188559\n",
+      "@ 이용객이 가장 적은 역 순위 @\n",
+      "보문 68519\n",
+      "삼양 95653\n",
+      "신설동 97960\n"
      ]
     }
    ],
@@ -335,7 +310,7 @@
     "import csv\n",
     "import re\n",
     "import operator\n",
-    "f = open('subwayUsers.csv','r',encoding = \"utf-8\")\n",
+    "f = open('subwayUsers2.csv','r',encoding = \"utf-8\")\n",
     "data = csv.reader(f)\n",
     "next(data)\n",
     "\n",
@@ -356,14 +331,13 @@
     "\n",
     "\n",
     "for key,value in dic.items():\n",
-    "    print(\"========================\")\n",
-    "    print(key)\n",
+    "    print(\"=========\"+key+\"==========\")\n",
     "    value = sorted(value, key = lambda x : x[1])\n",
     "    #print(value)\n",
-    "    print(\"@ 이용객이 가장 많은 역 순위\")\n",
+    "    print(\"@ 이용객이 가장 많은 역 순위 @\")\n",
     "    for i in range(-1,-4,-1):\n",
     "        print(value[i][0],value[i][1])\n",
-    "    print(\"@ 이용객이 가장 적은 역 순위\")\n",
+    "    print(\"@ 이용객이 가장 적은 역 순위 @\")\n",
     "    for i in range(0,3):\n",
     "        print(value[i][0],value[i][1])\n"
    ]
