--- a/solution.ipynb
+++ b/solution.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -130,6 +130,7 @@
     "#3\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
     "\n",
     "docs = np.array([[1,1,0,1,0,1],[1,1,1,0,1,0],[1,1,0,1,0,0]])\n",
     "#print(docs)\n",
@@ -140,7 +141,18 @@
     "for d in docs:\n",
     "    top = np.dot(d,query)\n",
     "    #print(top)\n",
-    "    bottom = np.sqrt(np.sum(d)) * np.sqrt(np.sum(query))\n",
+    "    dfD = pd.DataFrame(d)\n",
+    "    dfQ = pd.DataFrame(query)\n",
+    "    \n",
+    "    dfD['r'] = dfD.pow(2)\n",
+    "    dfSum1 = dfD['r'].sum()\n",
+    "    #print(dfSum)\n",
+    "    \n",
+    "    dfQ['r'] = dfQ.pow(2)\n",
+    "    dfSum2 = dfQ['r'].sum()\n",
+    "    #print(dfSum2)\n",
+    "    \n",
+    "    bottom = np.sqrt(dfSum1) * np.sqrt(dfSum2)\n",
     "    result = top / bottom\n",
     "    print(result)\n",
     "    resultArr.append(result)\n",
