--- a/solution.ipynb
+++ b/solution.ipynb
@@ -165,7 +165,7 @@
     "plt.title(\"Cosine similarities\")\n",
     "plt.bar([0,1,2],resultArr,label = la)\n",
     "plt.legend()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
